2014-03-27 Matt:
	* Add plotting macro for shower comparisons
	* Update TrkAna

2014-03-25 Matt:
	* Add option to specify the number of initial particles.

2014-03-19 Matt:
	* Added option to set tracking threshold
	* Added script to make simple tree.  We will see if it is useful
	* Committing fixed version of code to make simple tree

2014-03-13 Matt:
	* Adding python scripts used to make all the plots
	* Adding C scripts for formatting plot output
	* Adding submission scripts to give idea of how to run

2014-03-12 Matt:
	* TTree takes too long! Going back to text files.
	* Added modularity to save both track and step output in separate files.

2014-03-10 Matt:
	* After many changes, finally figured out my issue with particle counting. Commit changes before next update.
	* Next Update will be to create a TTree to be output of Geant information.

2014-02-14 Matt:
	* Committing revisions and current stable working version.
	* After trying many things to debug, I am pausing and going to tag this version
	* Readme updated with some info incase Geant4 peeps want to take a look

2014-02-12 Matt:
	* Committing some revisions and additions.

2014-02-05 Matt:
	* Adding output directory for output files

2014-02-04 Matt:
	* Creating repository for simple study of shower properties in various mediums
	* Adding basic detector construction
	* Including skeleton of executable
	* Adding makefile copied from ELS_mrelich
	* Adding physics list -- right now just gamma, e+, e-, and some EM physics processes
	* Adding run and event action
	* Adding primary action generator
	* Adding stepping action
	* Updated ice placment... just have particle gun inside the ice, easier to impliment
	* Have some simple information dumping